[package]
name = "welcome-kits"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dotenv = "0.15.0"
chrono = "0.4.38"
chia-wallet-sdk = "0.19.1"
chia = "0.15.0"
chia-bls = "0.15.0"
bip39 = "2.1.0"